--- a/src/components/weather/weather.scss
+++ b/src/components/weather/weather.scss
@@ -3,7 +3,7 @@
     border-radius: 15px;
     box-shadow: 0px 4px 6px rgba(0, 0, 0, 0.1);
     padding: 20px;
-    max-width: 600px;
+    max-width: 60%;
     margin: auto;
     font-family: Arial, sans-serif;
     color: #333;
@@ -16,8 +16,28 @@
       margin-bottom: 20px;
   
       .current-temp {
-        font-size: 48px;
-        color: #f8b400;
+        font-size: 18px;
+        color: #3E3232BF;
+        display: flex;
+        gap: 20px;
+
+        .nam {
+          display: flex;
+          flex-direction: column;
+          align-items: flex-start;
+          font-size: 16px;
+        }
+
+        h1 {
+          font-weight: 600;
+          font-size: 34px;
+          display: flex;
+          align-items: flex-start;
+          
+          span {
+            font-size: 12px;
+          }
+        }
       }
   
       .additional-info {
@@ -47,7 +67,7 @@
         flex-wrap: wrap;
   
         .hour {
-          background-color: #f4f4f4;
+          background-color: #f4f4f438;
           border-radius: 8px;
           padding: 10px;
           width: 80px;
@@ -57,11 +77,16 @@
           img {
             width: 40px;
             height: 40px;
+            filter: drop-shadow(4px 4px 6px rgba(0, 0, 0, 0.3));
           }
   
           p {
             margin: 5px 0;
             font-size: 16px;
+
+            &.date-hour {
+              font-weight: 600;
+            }
           }
         }
       }
