--- a/src/components/weather/weather.scss
+++ b/src/components/weather/weather.scss
@@ -21,6 +21,11 @@
         display: flex;
         gap: 20px;
 
+        .weather-left {
+          display: flex;
+          gap: 5px;
+        }
+
         .nam {
           display: flex;
           flex-direction: column;
@@ -95,5 +100,42 @@
 @media screen and (max-width: 500px) {
   .weather-widget {
     margin: 0 20px;
+    max-width: 100%;
+  
+    .current-weather {
+      flex-direction: column;
+      align-items: flex-start;
+
+      .current-temp {
+        display: flex;
+        justify-content: space-between;
+        width: 100%;
+        
+      }
+      .additional-info {
+        margin-top: 15px;
+        .info {
+          align-items: flex-start;
+          
+          p {
+            &:first-child {
+              color: #000;
+              font-size: 18px;
+            }
+
+            &:last-child {
+              text-transform: capitalize;
+            }
+          }
+        }
+      }
+    }
+    .forecast {
+      .forecast-hours {
+        .hour {
+          margin: 0;
+        }
+      }
+    }
   }
 }
